/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2012-12-31 09:18 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/compiler/comptool.c
    ! fixed stupid typo on hb_compSetCOutput() on switch arguments

2012-12-30 07:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/hbmake/hbmake.prg
    ! restore the version prior some of my changes because there are reports
      that those changes cause hbmake.exe crash.

2012-12-27 01:16 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.vc
  * winmake/makefile.pc
  * winmake/makefile.bc
  * winmake/makefile.wc
    ! covered include path macro within parentheses

2012-12-25 06:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/compiler/harbouryy.c
  * source/macro/macroyy.c
  * include/harboury.h
  * include/macroy.h
    ! regenerated using Bison 2.7

2012-12-25 04:07 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/mdir.bat
    + hbssl.lib related commands

2012-12-25 03:45 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/vm/inet.c
    + prg level INETFD( iSocket ) -> returns iSocket's file descriptor (fd)

  * include/hbapi.h
  * source/vm/extend.c
    + Added API hb_stor() to store a NIL into a parameter passed by reference,
      copied from Harbour

  * contrib/hbssl/*.*
  * winmake/common.mak
  * winmake/common1.mak
  * winmake/common2.mak
  * winmake/compile.mak
    + hbssl.lib borrowed from Harbour

2012-12-23 04:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * utils/misc/hbrm.c
    ! include bufferoverflowU.lib when linking with MSVC7-DDK

  * contrib/hbsqlit3/sqlite3.c
  * contrib/hbsqlit3/sqlite3.h
    ! update to version 3.7.15.1

2012-12-21 23:40 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * tests/pexec.prg
  * tests/pcode.prg
  * tests/pcode1.prg
    + SVN file attributes
