@@ -1206,6 +1206,7 @@ MacroText   : MACROTEXT {
                            }
 
                            $$ = hb_compExprNewMacro( hb_compExprNewList( pPlus ), 0, NULL );
+                           hb_xfree( $1 );
                          }
             ;
 
