@@ -294,8 +294,8 @@ static void hb_compDebugStart( void ) { };
 
 /* In a future release of Bison, this section will be replaced
    by #include "harboury.h".  */
-#ifndef YY_YY_OBJ_B32_HARBOURY_H_INCLUDED
-# define YY_YY_OBJ_B32_HARBOURY_H_INCLUDED
+#ifndef YY_YY_OBJ_55_HARBOURY_H_INCLUDED
+# define YY_YY_OBJ_55_HARBOURY_H_INCLUDED
 /* Enabling traces.  */
 #ifndef YYDEBUG
 # define YYDEBUG 0
@@ -511,7 +511,7 @@ int yyparse ();
 #endif
 #endif /* ! YYPARSE_PARAM */
 
-#endif /* !YY_YY_OBJ_B32_HARBOURY_H_INCLUDED  */
+#endif /* !YY_YY_OBJ_55_HARBOURY_H_INCLUDED  */
 
 /* Copy the second part of user declarations.  */
 
@@ -1224,77 +1224,77 @@ static const yytype_uint16 yyrline[] =
      858,   863,   871,   874,   888,   901,   915,   928,   942,   955,
      966,   976,   987,   997,  1008,  1020,  1026,  1029,  1032,  1033,
     1034,  1037,  1042,  1043,  1046,  1051,  1082,  1087,  1100,  1106,
-    1212,  1217,  1220,  1227,  1228,  1233,  1234,  1235,  1236,  1237,
-    1238,  1239,  1240,  1241,  1242,  1243,  1244,  1245,  1246,  1249,
-    1250,  1251,  1254,  1255,  1256,  1257,  1258,  1259,  1260,  1261,
-    1262,  1263,  1264,  1265,  1266,  1267,  1268,  1269,  1270,  1271,
-    1272,  1273,  1282,  1283,  1284,  1285,  1286,  1287,  1292,  1293,
-    1294,  1295,  1296,  1297,  1298,  1299,  1300,  1301,  1302,  1303,
-    1304,  1305,  1306,  1307,  1308,  1309,  1312,  1316,  1317,  1335,
-    1336,  1337,  1338,  1339,  1340,  1343,  1344,  1347,  1348,  1413,
-    1414,  1417,  1418,  1419,  1422,  1427,  1428,  1429,  1432,  1433,
-    1434,  1435,  1436,  1437,  1438,  1439,  1440,  1441,  1442,  1443,
-    1444,  1445,  1446,  1447,  1448,  1449,  1450,  1451,  1452,  1453,
-    1454,  1457,  1469,  1475,  1478,  1487,  1495,  1496,  1497,  1498,
-    1499,  1500,  1501,  1502,  1503,  1504,  1504,  1505,  1506,  1507,
-    1508,  1509,  1510,  1511,  1512,  1513,  1513,  1514,  1515,  1515,
-    1516,  1517,  1517,  1518,  1519,  1519,  1520,  1521,  1521,  1522,
-    1523,  1524,  1525,  1526,  1527,  1528,  1529,  1530,  1533,  1534,
-    1535,  1536,  1536,  1537,  1537,  1540,  1541,  1544,  1545,  1546,
-    1547,  1548,  1549,  1550,  1551,  1557,  1558,  1565,  1566,  1567,
-    1568,  1569,  1570,  1571,  1572,  1573,  1574,  1575,  1576,  1577,
-    1578,  1579,  1580,  1581,  1582,  1583,  1584,  1585,  1586,  1587,
-    1590,  1591,  1594,  1595,  1596,  1603,  1604,  1605,  1606,  1607,
-    1608,  1609,  1610,  1611,  1612,  1613,  1614,  1615,  1616,  1617,
-    1618,  1619,  1620,  1621,  1622,  1623,  1624,  1625,  1628,  1629,
-    1630,  1631,  1632,  1633,  1634,  1635,  1636,  1637,  1638,  1639,
-    1640,  1641,  1642,  1643,  1644,  1645,  1646,  1647,  1648,  1649,
-    1650,  1653,  1654,  1655,  1656,  1657,  1658,  1659,  1660,  1661,
-    1662,  1663,  1664,  1665,  1666,  1667,  1668,  1669,  1670,  1671,
-    1672,  1673,  1674,  1675,  1678,  1679,  1680,  1681,  1682,  1683,
-    1684,  1685,  1686,  1687,  1688,  1689,  1690,  1691,  1692,  1693,
-    1694,  1695,  1696,  1697,  1698,  1699,  1700,  1703,  1704,  1705,
-    1706,  1707,  1708,  1709,  1710,  1711,  1712,  1713,  1714,  1715,
-    1716,  1717,  1718,  1719,  1720,  1721,  1722,  1723,  1724,  1725,
-    1728,  1729,  1730,  1731,  1732,  1733,  1734,  1735,  1736,  1737,
-    1738,  1739,  1740,  1741,  1742,  1743,  1744,  1745,  1746,  1747,
-    1748,  1749,  1750,  1753,  1754,  1755,  1756,  1757,  1758,  1759,
-    1760,  1761,  1762,  1763,  1764,  1765,  1766,  1767,  1768,  1769,
-    1770,  1771,  1772,  1773,  1774,  1775,  1778,  1779,  1780,  1781,
-    1782,  1783,  1784,  1785,  1786,  1787,  1788,  1789,  1790,  1791,
-    1792,  1793,  1794,  1795,  1796,  1797,  1798,  1799,  1800,  1803,
-    1804,  1805,  1806,  1807,  1808,  1811,  1812,  1813,  1814,  1815,
-    1816,  1817,  1818,  1819,  1820,  1821,  1824,  1825,  1828,  1829,
-    1830,  1831,  1832,  1833,  1834,  1835,  1836,  1837,  1838,  1841,
-    1847,  1848,  1849,  1852,  1856,  1969,  2034,  2039,  2044,  1855,
-    2090,  2091,  2094,  2095,  2100,  2098,  2167,  2191,  2191,  2199,
-    2200,  2216,  2217,  2224,  2225,  2226,  2227,  2237,  2240,  2243,
-    2246,  2249,  2250,  2251,  2252,  2255,  2258,  2261,  2264,  2267,
-    2268,  2271,  2274,  2274,  2275,  2275,  2276,  2276,  2277,  2277,
-    2280,  2281,  2284,  2285,  2293,  2294,  2296,  2300,  2307,  2316,
-    2316,  2342,  2345,  2342,  2382,  2383,  2389,  2392,  2393,  2394,
-    2398,  2398,  2401,  2402,  2403,  2406,  2406,  2409,  2410,  2413,
-    2413,  2437,  2437,  2438,  2439,  2440,  2440,  2443,  2444,  2447,
-    2448,  2449,  2450,  2453,  2453,  2475,  2475,  2529,  2530,  2531,
-    2532,  2535,  2536,  2537,  2538,  2539,  2540,  2543,  2544,  2545,
-    2546,  2547,  2548,  2551,  2551,  2554,  2555,  2558,  2559,  2560,
-    2561,  2562,  2563,  2564,  2565,  2568,  2569,  2570,  2571,  2574,
-    2575,  2578,  2587,  2578,  2594,  2594,  2598,  2599,  2598,  2608,
-    2609,  2608,  2619,  2620,  2623,  2627,  2631,  2634,  2640,  2646,
-    2654,  2654,  2667,  2668,  2676,  2677,  2676,  2688,  2689,  2688,
-    2701,  2702,  2701,  2709,  2709,  2713,  2722,  2733,  2784,  2785,
-    2788,  2788,  2803,  2804,  2807,  2808,  2809,  2810,  2813,  2814,
-    2813,  2833,  2834,  2833,  2859,  2860,  2861,  2862,  2863,  2868,
-    2873,  2878,  2883,  2884,  2898,  2897,  2960,  2973,  2959,  2989,
-    3002,  3003,  3007,  3014,  3026,  3006,  3108,  3109,  3112,  3113,
-    3116,  3120,  3124,  3128,  3135,  3143,  3151,  3134,  3171,  3170,
-    3187,  3199,  3207,  3187,  3231,  3232,  3233,  3236,  3247,  3260,
-    3268,  3277,  3285,  3259,  3335,  3336,  3339,  3348,  3349,  3352,
-    3362,  3380,  3381,  3382,  3385,  3389,  3391,  3395,  3396,  3397,
-    3398,  3399,  3402,  3413,  3414,  3415,  3416,  3417,  3421,  3420,
-    3474,  3478,  3477,  3505,  3522,  3544,  3545,  3546,  3547,  3551,
-    3550,  3561,  3562,  3563,  3564,  3565,  3567,  3569,  3571,  3575,
-    3582,  3592,  3609,  3629,  3630
+    1213,  1218,  1221,  1228,  1229,  1234,  1235,  1236,  1237,  1238,
+    1239,  1240,  1241,  1242,  1243,  1244,  1245,  1246,  1247,  1250,
+    1251,  1252,  1255,  1256,  1257,  1258,  1259,  1260,  1261,  1262,
+    1263,  1264,  1265,  1266,  1267,  1268,  1269,  1270,  1271,  1272,
+    1273,  1274,  1283,  1284,  1285,  1286,  1287,  1288,  1293,  1294,
+    1295,  1296,  1297,  1298,  1299,  1300,  1301,  1302,  1303,  1304,
+    1305,  1306,  1307,  1308,  1309,  1310,  1313,  1317,  1318,  1336,
+    1337,  1338,  1339,  1340,  1341,  1344,  1345,  1348,  1349,  1414,
+    1415,  1418,  1419,  1420,  1423,  1428,  1429,  1430,  1433,  1434,
+    1435,  1436,  1437,  1438,  1439,  1440,  1441,  1442,  1443,  1444,
+    1445,  1446,  1447,  1448,  1449,  1450,  1451,  1452,  1453,  1454,
+    1455,  1458,  1470,  1476,  1479,  1488,  1496,  1497,  1498,  1499,
+    1500,  1501,  1502,  1503,  1504,  1505,  1505,  1506,  1507,  1508,
+    1509,  1510,  1511,  1512,  1513,  1514,  1514,  1515,  1516,  1516,
+    1517,  1518,  1518,  1519,  1520,  1520,  1521,  1522,  1522,  1523,
+    1524,  1525,  1526,  1527,  1528,  1529,  1530,  1531,  1534,  1535,
+    1536,  1537,  1537,  1538,  1538,  1541,  1542,  1545,  1546,  1547,
+    1548,  1549,  1550,  1551,  1552,  1558,  1559,  1566,  1567,  1568,
+    1569,  1570,  1571,  1572,  1573,  1574,  1575,  1576,  1577,  1578,
+    1579,  1580,  1581,  1582,  1583,  1584,  1585,  1586,  1587,  1588,
+    1591,  1592,  1595,  1596,  1597,  1604,  1605,  1606,  1607,  1608,
+    1609,  1610,  1611,  1612,  1613,  1614,  1615,  1616,  1617,  1618,
+    1619,  1620,  1621,  1622,  1623,  1624,  1625,  1626,  1629,  1630,
+    1631,  1632,  1633,  1634,  1635,  1636,  1637,  1638,  1639,  1640,
+    1641,  1642,  1643,  1644,  1645,  1646,  1647,  1648,  1649,  1650,
+    1651,  1654,  1655,  1656,  1657,  1658,  1659,  1660,  1661,  1662,
+    1663,  1664,  1665,  1666,  1667,  1668,  1669,  1670,  1671,  1672,
+    1673,  1674,  1675,  1676,  1679,  1680,  1681,  1682,  1683,  1684,
+    1685,  1686,  1687,  1688,  1689,  1690,  1691,  1692,  1693,  1694,
+    1695,  1696,  1697,  1698,  1699,  1700,  1701,  1704,  1705,  1706,
+    1707,  1708,  1709,  1710,  1711,  1712,  1713,  1714,  1715,  1716,
+    1717,  1718,  1719,  1720,  1721,  1722,  1723,  1724,  1725,  1726,
+    1729,  1730,  1731,  1732,  1733,  1734,  1735,  1736,  1737,  1738,
+    1739,  1740,  1741,  1742,  1743,  1744,  1745,  1746,  1747,  1748,
+    1749,  1750,  1751,  1754,  1755,  1756,  1757,  1758,  1759,  1760,
+    1761,  1762,  1763,  1764,  1765,  1766,  1767,  1768,  1769,  1770,
+    1771,  1772,  1773,  1774,  1775,  1776,  1779,  1780,  1781,  1782,
+    1783,  1784,  1785,  1786,  1787,  1788,  1789,  1790,  1791,  1792,
+    1793,  1794,  1795,  1796,  1797,  1798,  1799,  1800,  1801,  1804,
+    1805,  1806,  1807,  1808,  1809,  1812,  1813,  1814,  1815,  1816,
+    1817,  1818,  1819,  1820,  1821,  1822,  1825,  1826,  1829,  1830,
+    1831,  1832,  1833,  1834,  1835,  1836,  1837,  1838,  1839,  1842,
+    1848,  1849,  1850,  1853,  1857,  1970,  2035,  2040,  2045,  1856,
+    2091,  2092,  2095,  2096,  2101,  2099,  2168,  2192,  2192,  2200,
+    2201,  2217,  2218,  2225,  2226,  2227,  2228,  2238,  2241,  2244,
+    2247,  2250,  2251,  2252,  2253,  2256,  2259,  2262,  2265,  2268,
+    2269,  2272,  2275,  2275,  2276,  2276,  2277,  2277,  2278,  2278,
+    2281,  2282,  2285,  2286,  2294,  2295,  2297,  2301,  2308,  2317,
+    2317,  2343,  2346,  2343,  2383,  2384,  2390,  2393,  2394,  2395,
+    2399,  2399,  2402,  2403,  2404,  2407,  2407,  2410,  2411,  2414,
+    2414,  2438,  2438,  2439,  2440,  2441,  2441,  2444,  2445,  2448,
+    2449,  2450,  2451,  2454,  2454,  2476,  2476,  2530,  2531,  2532,
+    2533,  2536,  2537,  2538,  2539,  2540,  2541,  2544,  2545,  2546,
+    2547,  2548,  2549,  2552,  2552,  2555,  2556,  2559,  2560,  2561,
+    2562,  2563,  2564,  2565,  2566,  2569,  2570,  2571,  2572,  2575,
+    2576,  2579,  2588,  2579,  2595,  2595,  2599,  2600,  2599,  2609,
+    2610,  2609,  2620,  2621,  2624,  2628,  2632,  2635,  2641,  2647,
+    2655,  2655,  2668,  2669,  2677,  2678,  2677,  2689,  2690,  2689,
+    2702,  2703,  2702,  2710,  2710,  2714,  2723,  2734,  2785,  2786,
+    2789,  2789,  2804,  2805,  2808,  2809,  2810,  2811,  2814,  2815,
+    2814,  2834,  2835,  2834,  2860,  2861,  2862,  2863,  2864,  2869,
+    2874,  2879,  2884,  2885,  2899,  2898,  2961,  2974,  2960,  2990,
+    3003,  3004,  3008,  3015,  3027,  3007,  3109,  3110,  3113,  3114,
+    3117,  3121,  3125,  3129,  3136,  3144,  3152,  3135,  3172,  3171,
+    3188,  3200,  3208,  3188,  3232,  3233,  3234,  3237,  3248,  3261,
+    3269,  3278,  3286,  3260,  3336,  3337,  3340,  3349,  3350,  3353,
+    3363,  3381,  3382,  3383,  3386,  3390,  3392,  3396,  3397,  3398,
+    3399,  3400,  3403,  3414,  3415,  3416,  3417,  3418,  3422,  3421,
+    3475,  3479,  3478,  3506,  3523,  3545,  3546,  3547,  3548,  3552,
+    3551,  3562,  3563,  3564,  3565,  3566,  3568,  3570,  3572,  3576,
+    3583,  3593,  3610,  3630,  3631
 };
 #endif
 
@@ -6177,6 +6177,7 @@ yyreduce:
                            }
 
                            (yyval.asExpr) = hb_compExprNewMacro( hb_compExprNewList( pPlus ), 0, NULL );
+                           hb_xfree( (yyvsp[(1) - (1)].string) );
                          }
     break;
 
