@@ -8,6 +8,11 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2013-01-06 19:33 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * source/compiler/harbour.sly
+  * source/compiler/harbouryy.c
+    ! fix one memory leak found by Salius (Thanks!)
+
 2012-12-31 09:18 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * source/compiler/comptool.c
     ! fixed stupid typo on hb_compSetCOutput() on switch arguments
